amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  FIX: Even though OSD was disabled, it was sometimes showing up.
  FIX: Always show OSD (if enabled) on volume changes.
  FIX: Filtering the collection using tokens with number(s) at the beginning
       or end failed. (BR 81621).
  FIX: FileBrowser didn't remember its current folder (BR 81816).
  ADD: Expand/collapse items by doubleclicking in Collection (BR 81710).
  FIX: Allow OSD still to be shown via shortcut when disabled (BR 80388). 
  FIX: Collection: live-monitoring dirs for changes works again.
  FIX: Changing volume by mousewheel on systray icon works again.
  ADD: Collection automatically rescans itself on startup.
  ADD: "Add to Playlist" feature in CollectionBrowser, appends tracks to playlist.
  ADD: Clear button for CollectionBrowser search.
  FIX: Problem with invisible "Play next" marker in playlist.
  FIX: Don't try to create sql-tables on every startup, but only on
       sql-scheme (DATABASE_VERSION) changes.
  FIX: Display splash screen on correct desktop with Xinerama.
  CHG: CollectionBrowser filter now works in "search-as-you-type" mode.
  FIX: Prevent TitleProxy from showing the same metadata over and over.
  FIX: Compatibility bugfixes to TitleProxy, thanks to Daniel Molkentin
       <danimo@kde.org>. I think we've now got 100% Shoutcast compatibility.
  ADD: Allow changing volume by using the mousewheel anywhere on the toolbar.
  FIX: Wheel-scrolling toolbar's volume slider doesn't change volume (BR 81155).
  FIX: ContextBrowser is now shown in proper colors for every scheme.
  CHG: Added track's physical location to the Meta Information dialog.
  FIX: Show last playtime in localtime instead of UTC.
  FIX: ContextBrowser not showing all items for current album.
  FIX: Not all SQL queries were "string-escaped".
  ADD: Added statistics database, which keeps track of how often and when you play
       a specific song.

VERSION 1.0-beta3: