@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: ContextBrowser's URLRequests need to be escaped.
   FIX: Even though OSD was disabled, it was sometimes showing up.
   FIX: Always show OSD (if enabled) on volume changes.
   FIX: Filtering the collection using tokens with number(s) at the beginning
